Source/WebKit/PlatformWin.cmake
@@ -52,6 +52,7 @@ list(APPEND WebKit_SOURCES
     UIProcess/win/WebContextMenuProxyWin.cpp
     UIProcess/win/WebInspectorProxyWin.cpp
     UIProcess/win/WebPageProxyWin.cpp
+    UIProcess/win/WebPopupMenuProxyWin.cpp
     UIProcess/win/WebPreferencesWin.cpp
     UIProcess/win/WebProcessPoolWin.cpp
     UIProcess/win/WebView.cpp
